# AlgorithmsandDataStructures2University

./: README.md
Dictionary-F/: dict.c  dict.h  dict_helpers.c  main.c  map.c
Knapsack-Problem/: item.c  item.h  knapsack.h  qsort.c  qsort.h
semana01/lab/ejercicios/ej1/: README1.txt  main.c  sort.c
semana01/lab/ejercicios/ej2/: README2.txt  main.c  sort.c  sort.h  sorter
semana01/lab/ejercicios/ej3/: README3.txt  (+3 more)
semana04/1/: README1.txt  array_helpers.c  array_helpers.h  main.c  weather  weather.c  weather.h  weather_cordoba.out
semana04/2/: README2.txt  atpplayers.out  helpers.c  mysort  sort.c
semana04/3/: README3.txt  main  main.c  mainpuntero
semana04/4/: README4.txt  atpplayers.out  helpers.c  helpers.h  mysort  sort.c
semana05/1/: README1.txt  counter.c  counter.h  main.c  match
semana05/2/: README2.txt  counter.c  counter.h  main.c
semana05/3/: README3.txt  counter.c  counter.h  main.c
semana05/4/: Ejemplo.hs  README4.txt  TADBooleano.c  TADBooleano.h  TADNatural.c  TADNatural.h  criba.c  criba.h  main.c  primos
semana06/: CMakeLists.txt
semana06/1/: README1.txt  main.c  match  match.c  match.h  stack.c  stack.h
semana06/2/: README2.txt  main.c  main2.c  match  match.c  stack  stack.c  stack.h
semana06/2/match.dSYM/Contents/Resources/DWARF/: match
semana06/3/: README3.txt  main.c  queue.c  sort  sort.c  sort.h
semana06/4/: README4.txt  array_helpers.c  array_helpers.h  main2.c  queue  queue.c  queue.h  sort  sort.c  stack
semana06/input/: ppp  unbalanced.in  unsorted-positive-100000.in
semana09/1/: Makefile  dict.c  map.h
(+58 files in other folders)
